fix main.css path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Discord | Your Place to Talk and Hang Out</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     
